crud themes templates

--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "yeoji/parsh-cms",
     "description": "A partial CMS created for Laravel",
     "require": {
-      "php": ">=5.4.0",
-      "illuminate/support": "~5.0"
+      "php": ">=5.4.0"
     },
     "autoload": {
       "psr-4": {
